--- a/languages/makefile.org
+++ b/languages/makefile.org
@@ -1,3 +1,5 @@
+- Practical Makefiles, by example http://nuclear.mutantstargoat.com/articles/make/
+- https://www.cs.swarthmore.edu/~newhall/unixhelp/howto_makefiles.html
 - POSIX Make https://pubs.opengroup.org/onlinepubs/9699919799/utilities/make.html
 - GNU Make https://www.gnu.org/software/make/manual/html_node/index.html#Top
   - 10.3 Variables Used by Implicit Rules
