--- a/languages/c/makefile.org
+++ b/languages/c/makefile.org
@@ -9,6 +9,20 @@
 - GNU Make https://www.gnu.org/software/make/manual/html_node/index.html#Top
   - 10.3 Variables Used by Implicit Rules
     https://www.gnu.org/software/make/manual/html_node/Implicit-Variables.html
+- article https://devhints.io/makefile
+- article https://learnxinyminutes.com/docs/make/
+- tool: linter https://github.com/mrtazz/checkmake
+
+* Language
+** Variables
+|----+-------------------------------------|
+| $@ | target name                         |
+| $< | 1st prerequisite                    |
+| $^ | all prerequisites                   |
+| $+ | all prerequisites, with repetitions |
+| $? | invalid - empty string              |
+| $* | invalid - empty string              |
+|----+-------------------------------------|
 * Example: some anon makefile - DEBUG flag
 - src/program.c
   #+begin_src c
