--- a/languages/c/makefile.org
+++ b/languages/c/makefile.org
@@ -1,6 +1,13 @@
-- Alternative: https://github.com/casey/just
-  - https://github.com/casey/just#what-are-the-idiosyncrasies-of-make-that-just-avoids
-    - Needing to use "$$" to use environment variables (?) in recipes
+| gnu make    | https://www.gnu.org/software/make/ |
+| alternative | https://github.com/casey/just                                   |
+
+
+- wiki https://en.wikipedia.org/wiki/Make_(software)
+  - Author: Stuart Feldman
+  - 1976-
+
+- https://github.com/casey/just#what-are-the-idiosyncrasies-of-make-that-just-avoids
+  - Needing to use "$$" to use environment variables (?) in recipes
 - https://swcarpentry.github.io/make-novice/reference.html
 - Template https://github.com/mbcrawfo/GenericMakefile/
 - Practical Makefiles, by example http://nuclear.mutantstargoat.com/articles/make/
@@ -9,8 +16,9 @@
 - GNU Make https://www.gnu.org/software/make/manual/html_node/index.html#Top
   - 10.3 Variables Used by Implicit Rules
     https://www.gnu.org/software/make/manual/html_node/Implicit-Variables.html
-- article https://devhints.io/makefile
-- article https://learnxinyminutes.com/docs/make/
+- article 19 https://tech.davis-hansson.com/p/make/
+- examples https://devhints.io/makefile
+- examples https://learnxinyminutes.com/docs/make/
 - tool: linter https://github.com/mrtazz/checkmake
 
 * Language
@@ -19,7 +27,7 @@
 | $@ | target name                         |
 | $< | 1st prerequisite                    |
 | $^ | all prerequisites                   |
-| $+ | all prerequisites, with repetitions |
+| j$+ | all prerequisites, with repetitions |
 |----+-------------------------------------|
 | $? | invalid - empty string              |
 | $* | invalid - empty string              |
